# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  spec.yaml
.cargo/: config.toml
.sqlx/: query-061cfc3efff1eb19a91081a293acfb060f29766f187925a57f0b27759915b167.json  query-0f2c8f5d0c2230bb71727ded2d0c5d52a442a88fa7f82a77f5765da4f6664d90.json  query-1e5c160de8e55012767aa3aec798c3835d0dbc3e3a7efcc6f4d71be531e2f909.json  query-1f83363ef29a959503dbccd4009060046c629c02f321ecd3eaf17e66e5c96913.json  query-2505b5f942a7bc360ca9fecb14ce8100a721d692b4ace8c7e11cf81d169c8d52.json  query-29e64061a32e96f0ba0d00a08d9d4c37dc07670525cab15fd4a49a70e4a381f2.json  query-85d4c5b3e8897ba691cd0689987b8b8e7c870e2a77208c71cb30932855094cc4.json  query-8ce4632ffb5acee056fec3b68267ec3bbd41ab5edf8528a1a484896b066e6f12.json  query-91dccf5d4cbda26828cfbc8dd8dab5e630730d3abc37fb3f67d3b01d169a5f81.json  query-9fa8bbbe24ee4e270ec45c28c3f3d661e4cd68a94c81a0fd4170d56ef4fabbe2.json  query-a1959297b303168891059e4bfe2cd381a714c63c5c4d46cd3cfc129974401376.json  query-a9612b3227a739884a8e381b1fae041a0f9729ca2121f14ebe8983f787e0e331.json  query-bb1945ce4ac36b989185c5ef0029f73b61c292256022697e5643a3a478c42bb8.json  query-c84580c324ecc032666606a2f61ec9cb9675454638034a52ae26a7771d49fcdc.json  query-ddc639a5a8944725cdee9d06e06339e92fc81b99f65ff9894b5ccac615242ce7.json  query-f071549266f21489c3652bee8211cfd9753bec14b0297dff4d313fb1166851e9.json  query-f597c16729078daf37c04f8f296899adb0c334873de30bcbde91926b132e54f7.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240319064714_create_subscriptions_table.sql  20240430055539_make_status_not_null_in_subscriptions.sql  20240430060255_crate_subscription_tokens_table.sql  20240430060702_crate_subscription_tokens_table.sql  20240521102915_create_users_table.sql  20240521113643_rename_password_column.sql  20240521124713_make_users_salty.sql  20240521135553_remove_salt_from_users.sql  20240529145049_seed_admin_user.sql  20240624061728_create_idempotency_table.sql  20240626094803_create_newsletter_issues_table.sql  20240626102026_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  domain.rs  (+9 more)
(+45 files in other folders)
